# wyvor

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  nuxt.config.js  rustfmt.toml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  feature-request.md  feature_request.md
api/: .env.example  Cargo.toml
api/migrations/00000000000000_diesel_initial_setup/: up.sql
api/migrations/2020-10-18-030358_intialize_db/: down.sql  up.sql
api/src/: config.rs  constants.rs  main.rs
api/src/db/: migration.rs  mod.rs  schema.rs
api/src/db/cache/: mod.rs  models.rs
api/src/db/pubsub/: mod.rs  models.rs
api/src/models/: account.rs  blacklist.rs  config.rs  guild.rs  guild_log.rs  guild_stat.rs  mod.rs  playlist.rs  playlist_item.rs
api/src/routes/: admin.rs  errors.rs  index.rs  mod.rs  tracks.rs  users.rs
api/src/routes/guilds/: mod.rs  player.rs  playlist.rs  queue.rs
api/src/utils/: auth.rs  log.rs  metrics.rs  mod.rs  player.rs  polling.rs  queue.rs
bot/: .env.example  go.mod  go.sum  main.go
bot/commands/: commands.go
bot/commands/admin/: banuser.go  echo.go  findservers.go  sharedservers.go  topservers.go  unbanuser.go
bot/commands/core/: connect.go  disconnect.go  effects.go  equalizer.go  lyrics.go  nowplaying.go  play.go  playfile.go  queue.go
bot/commands/general/: commands.go  dashboard.go  help.go  invite.go  ping.go  prefix.go  stats.go  support.go
bot/commands/owner/: bash.go  disconnectall.go  eval.go  invoke.go  reconnect.go  setstatus.go  shutdown.go
bot/commands/player/: forward.go  loop.go  pause.go  resume.go  rewind.go  seek.go  volume.go
bot/commands/playlist/: playlistcreate.go  playlistdelete.go  playlistload.go  playlists.go  playlistshow.go
bot/commands/queue/: clear.go  jump.go  move.go  next.go  previous.go  remove.go  shuffle.go
bot/common/: common.go
bot/config/: config.go  constants.go
bot/core/: core.go
bot/core/api/: api.go  endpoints.go
bot/core/cache/: cache.go  jobs.go  models.go
bot/core/command/: command.go  models.go  utils.go
bot/core/events/: all_events.go  events.go  handlers.go
bot/core/pubsub/: all_events.go  handlers.go  models.go  pubsub.go
bot/core/queue/: models.go  queue.go
bot/utils/: pastebin.go  utils.go
bot/utils/debug/: debug.go
bot/utils/logger/: logger.go
bot/utils/metrics/: gateway.go  http.go  metrics.go  pubsub.go  state.go
client/: package.json  stylelint.config.js
client/assets/scss/: styles.scss
client/components/: TheFooter.vue
client/content/: about.md  modules.md  settings.md
examples/: andesite.conf  dispatch.env  prometheus.yml
migrations/2022-04-01-000000_intialize_db/: up.sql
scripts/: changelog.sh  deploy.sh  format.sh  lint.sh
server/: Cargo.toml
server/migrations/2022-04-01-000000_intialize_db/: down.sql
server/src/: auth.rs  config.rs  error.rs  main.rs
server/src/models/: account.rs  member.rs  mod.rs  playlist.rs  space.rs
server/src/routes/: basic.rs  mod.rs  tracks.rs  users.rs
server/src/routes/spaces/: member.rs  mod.rs  player.rs  playlist.rs  queue.rs
server/src/routes/users/: me.rs  mod.rs
server/src/utils/: mail.rs  mod.rs  music.rs  player.rs  queue.rs
server/src/websockets/: mod.rs  server.rs
server/src/ws/: mod.rs  server.rs  session.rs
server/templates/: invite.hbs  password.hbs  reset.hbs  verify.hbs
server/templates/partials/: footer.hbs
src/: auth.rs  config.rs  error.rs  main.rs  music.rs
src/db/: cache.rs  mod.rs  schema.rs
src/models/: account.rs  member.rs  mod.rs  playlist.rs  space.rs
src/routes/: basic.rs  mod.rs  playlists.rs  tracks.rs  users.rs
src/routes/spaces/: mod.rs  player.rs  playlist.rs
src/utils/: mod.rs
templates/: welcome.hbs
templates/partials/: header.hbs
web/: .env.example  .prettierrc.js  package.json
web/components/: TheFooter.vue  TheHeader.vue
web/content/: about.md  commands.md  effects.md  equalizer.md  faq.md  modules.md  partners.md  privacy.md  settings.md  terms.md
web/pages/: status.vue
web/pages/dashboard/: index.vue
(+10 files in other folders)
